--- a/nextgisweb/pyramid/nodepkg/layout/Menu.less
+++ b/nextgisweb/pyramid/nodepkg/layout/Menu.less
@@ -4,15 +4,15 @@
     vertical-align: middle;
     cursor: pointer;
     border-radius: 2px;
-    width: 32px;
-    height: 32px;
+    width: 24px;
+    height: 24px;
     color: var(--primary);
-    line-height: 32px;
+    line-height: 24px;
     text-align: center;
 
     > svg.icon {
         color: inherit;
-        font-size: 32px;
+        font-size: 24px;
     }
 
     > span.main {
@@ -44,12 +44,13 @@
 
 .ngw-pyramid-menu-drawer {
     .ant-drawer-header {
-        border-bottom: 1px solid rgba(0, 0, 0, 0.04);
-        padding: 16px 12px;
+        border-bottom: 0.005em solid rgba(0, 0, 0, 0.04);
+        height: 40px;
+        padding: 11px 5px;
 
         .ant-drawer-header-title .ant-drawer-close {
             margin-left: auto;
-            margin-right: 6px;
+            margin-right: 0;
         }
     }
 
