--- a/nextgisweb/static/css/layout.less
+++ b/nextgisweb/static/css/layout.less
@@ -167,8 +167,8 @@ a[class*=" icon-"]:hover:before {
     align-items: center;
     gap: 10px;
     box-sizing: border-box;
-    border-bottom: 1px solid var(--divider-color);
-    padding: 5px 5px;
+    border-bottom: 0 solid var(--divider-color);
+    padding: 0;
     min-width: 0;
     min-height: 40px;
 
@@ -202,11 +202,12 @@ a[class*=" icon-"]:hover:before {
     }
 
     > div.container {
-        display: flex;
         align-items: center;
-        gap: 6px;
+        display: flex;
+        gap: 7px;
+        min-height: 24px;
         min-width: 0;
-        min-height: 32px;
+        margin: 0 7px 0 0;
     }
 }
 
