update style layersTree

--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -1,8 +1,11 @@
 .ngw-webmap-layers-tree {
     .ant-tree-checkbox {
-        margin: 0px 0 0px 0;
         display: flex;
         align-items: center;
+        top: initial;
+        margin-inline-end: 0;
+        align-self: center;
+        margin-top: 0;
     }
 
     .ant-tree-node-content-wrapper {
