update layer tree style

--- a/nextgisweb/resource/nodepkg/webgis/content.less
+++ b/nextgisweb/resource/nodepkg/webgis/content.less
@@ -79,6 +79,10 @@ body {
 					margin-top: 24px;
 					display: flex;
 
+					.menu-list {
+						max-width: 300px;
+					}
+
 					.ant-menu-inline {
 						border-inline-end: 0px solid #ffffff00 !important;
 						user-select: none;
