--- a/nextgisweb/webmap/nodepkg/layers-tree/Legend.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/Legend.less
@@ -2,6 +2,12 @@
     display: flex;
     row-gap: 2px;
     flex-direction: column;
+    
+    .legend-item {
+        display: flex;
+        align-items: center;
+        margin-left: 2px;
+    }
 
     .legend-symbol {
         display: flex;
