update layer tree style

--- a/nextgisweb/resource/nodepkg/webgis/content.less
+++ b/nextgisweb/resource/nodepkg/webgis/content.less
@@ -129,6 +129,7 @@ body {
 							padding: 0;
 							border-top-right-radius: 2px;
 							border-top-left-radius: 2px;
+							width: 100%;
 						}
 
 						.img_preview_none {
