update style auth map list

--- a/nextgisweb/resource/nodepkg/webgis/header.less
+++ b/nextgisweb/resource/nodepkg/webgis/header.less
@@ -94,7 +94,7 @@
 }
 
 .menu-avatar {
-    width: 70px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -112,7 +112,6 @@
 	&-label {
 		display: flex;
 		vertical-align: middle;
-		width: 22px;
 		height: 22px;
 		line-height: 22px;
 		border-radius: 2px;
@@ -133,7 +132,7 @@
 
 .menu-avatar-authenticated {
 	line-height: 1;
-	padding: 0 6px;
+	padding: 0 2px;
 }
 
 
