update style menu map list

--- a/nextgisweb/resource/nodepkg/webgis/content.less
+++ b/nextgisweb/resource/nodepkg/webgis/content.less
@@ -12,7 +12,9 @@ body {
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
-
+	.ant-tooltip {
+		pointer-events: none !important;
+	}
 	.wrapper-webgis {
 		min-height: 100vh;
 		display: grid;
