--- a/nextgisweb/resource/nodepkg/webgis/content.less
+++ b/nextgisweb/resource/nodepkg/webgis/content.less
@@ -41,6 +41,14 @@ body {
 				.search-block {
 					max-width: 500px;
 
+					.ant-input-affix-wrapper {
+						border-bottom-width: 1px !important;
+						border-bottom-style: solid !important;
+						border-color: #2A388C;
+						border-style: none;
+						border-radius: 0;
+					}
+
 					:where(.css-dev-only-do-not-override-1eo065b).ant-input-affix-wrapper .ant-input-prefix {
 						margin-inline-end: 10px;
 					}
