add button header menu and maps link update and source

--- a/nextgisweb/resource/nodepkg/webgis/content.less
+++ b/nextgisweb/resource/nodepkg/webgis/content.less
@@ -254,5 +254,5 @@ body {
 
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
-	color: rgba(42, 57, 140, 0.65) !important;
+	color: #2a398ca6 !important;
 }
