--- a/nextgisweb/resource/nodepkg/webgis/header.less
+++ b/nextgisweb/resource/nodepkg/webgis/header.less
@@ -52,6 +52,15 @@
 					margin: 0;
 					border-inline-start: 1px solid #fff;
 				}
+
+				.res-link {
+					margin: 0 0 0 20px;
+
+					svg {
+						color: #ffffff;
+					}
+
+				}
 			}
 		}
 	}
@@ -94,14 +103,14 @@
 }
 
 .menu-avatar {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 0 0 16px;
-    border-radius: 4px;
-    height: 20px;
-    border: 1px solid white;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0;
+	border-radius: 4px;
+	height: 20px;
+	border: 1px solid white;
 
 	>a {
 		font-size: 14px;
@@ -133,6 +142,7 @@
 .menu-avatar-authenticated {
 	line-height: 1;
 	padding: 0 2px;
+	margin: 0 10px;
 }
 
 
@@ -153,6 +163,8 @@
 	.ant-popover-title {
 		padding: 0;
 		min-width: 0;
+		display: flex;
+		justify-content: center;
 	}
 
 	.ant-popover-inner-content {
@@ -184,6 +196,7 @@
 	background-color: #2a388c;
 	font-family: "Montserrat";
 	font-weight: 500;
+
 	&:hover {
 		color: #000 !important;
 		background: #ffffff !important;
