--- a/nextgisweb/webmap/nodepkg/navigation-menu/NavigationMenu.less
+++ b/nextgisweb/webmap/nodepkg/navigation-menu/NavigationMenu.less
@@ -17,14 +17,41 @@
         user-select: none;
         text-align: center;
 
-        & > svg.icon {
+        &>svg.icon {
             opacity: 0.5;
             font-size: 24px;
         }
 
-        &.active > svg.icon,
-        &:hover > svg.icon {
+        &.active>svg.icon,
+        &:hover>svg.icon {
             opacity: 1;
         }
+    }
+}
+
+.customlink {
+    width: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.infoblock {
+    position: absolute;
+    bottom: 0px;
+    display: flex;
+    height: 80px;
+    width: 40px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+
+    .iconLinks {
+        color: #87b4c7;
+        font-size: 20px;
+    }
+
+    .iconLinks:hover {
+        color: rgb(255, 255, 255);
     }
 }
