--- a/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
@@ -1,39 +1,32 @@
-.ngw-webmap-description-panel {
+.ngw-webmap-diagram-panel {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 
-    span {
-        display: block;
-        overflow-wrap: break-word;
+    .results {
+        flex: auto;
+        overflow-y: auto;
+
+        .bookmark {
+            cursor: pointer;
+            padding: 6px 10px 6px 10px;
+
+            &:hover {
+                background-color: #eae9e9;
+            }
+
+            &.selected {
+                cursor: auto;
+                background-color: #eae9e9;
+            }
+        }
+
+        .loading {
+            margin-top: 20px;
+            color: #076dbf;
+            text-align: center;
+        }
     }
-
-    a {
-        color: #106a90;
-    }
-
-    >button.ngw-webmap-close-button {
-        float: right;
-        margin: 2px;
-    }
-
-    .imgDesc {
-        height: auto;
-    }
-
-    .image {
-        display: block;
-        margin-block-start: 0em;
-        margin-block-end: 0em;
-        margin-inline-start: 5px;
-        margin-inline-end: 5px;
-    }
-
-    p {
-        display: block;
-        margin-block-start: 0;
-        margin-block-end: 0;
-        margin-inline-start: 5px;
-        margin-inline-end: 5px;
-    }
-
 
 }
 
