--- a/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
@@ -4,9 +4,14 @@
     height: 100%;
 
     .results {
+        padding: 2px;
         flex: auto;
         overflow-y: auto;
 
+        .diagram-button {
+            display: flex;
+            justify-content: space-between;
+        }
     }
 
 }
