create info from graphs

--- a/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
@@ -11,8 +11,12 @@
         .diagram-button {
             display: flex;
             justify-content: space-between;
+            padding: 5px 0px;
         }
 
+        .diagram-content {
+            height: 300px;
+        }
     }
 
 }
