--- a/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
@@ -11,7 +11,14 @@
         .diagram-button {
             display: flex;
             justify-content: space-between;
-            padding: 5px 0px;
+            padding: 5px;
+
+            .diagram-button-old-new{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                width: 100%;
+            }
         }
 
         .diagram-content {
