--- a/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
@@ -8,21 +8,35 @@
         flex: auto;
         overflow-y: auto;
 
+        .diagram-button-none {
+            padding: 0;
+            display: flex;
+            justify-content: space-between;
+        }
+
         .diagram-button {
             display: flex;
             justify-content: space-between;
-            padding: 5px;
+            padding: 0;
+        }
 
-            .diagram-button-old-new{
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                width: 100%;
-            }
+        .diagram-button-old-new {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            width: 100%;
         }
 
         .diagram-content {
             height: 300px;
+        }
+
+        .ant-divider-horizontal {
+            display: flex;
+            clear: both;
+            width: 100%;
+            min-width: 100%;
+            margin: 5px 0;
         }
     }
 
