edit style graphs

--- a/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
@@ -8,16 +8,11 @@
         flex: auto;
         overflow-y: auto;
 
-        .diagram-button-none {
-            padding: 0;
-            display: flex;
-            justify-content: space-between;
-        }
-
         .diagram-button {
             display: flex;
             justify-content: space-between;
             padding: 0;
+            margin-bottom: 5px;
         }
 
         .diagram-button-old-new {
