description fix error, graphs

--- a/nextgisweb/webmap/nodepkg/layers-tree/ParseDesc.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/ParseDesc.less
@@ -3,6 +3,8 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  width: 175px;
+  display: block;
 }
 
 .resource-link {
@@ -34,3 +36,6 @@
   font-size: 12px;
 }
 
+.ant-tabs-nav-more {
+  display: none;
+}
