--- a/nextgisweb/webmap/nodepkg/panel/description/DescriptionPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/description/DescriptionPanel.less
@@ -33,7 +33,13 @@
         margin-inline-start: 5px;
         margin-inline-end: 5px;
     }
-
+    .p-padding {
+        display: block;
+        margin-block-start: 0;
+        margin-block-end: 0;
+        margin-inline-start: 5px;
+        margin-inline-end: 5px;
+    }
 
 }
 
