--- a/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
@@ -20,6 +20,7 @@
             flex-direction: row;
             justify-content: space-between;
             width: 100%;
+            padding: 0 0 5px 0;
         }
 
         .diagram-content {
@@ -31,7 +32,7 @@
             clear: both;
             width: 100%;
             min-width: 100%;
-            margin: 5px 0;
+            margin: 5px 0 10px 0;
         }
     }
 
