update style and icon layer tree

--- a/nextgisweb/webmap/nodepkg/layers-tree/DropdownFile.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/DropdownFile.less
@@ -61,6 +61,7 @@
 }
 
 .customFile {
+  border-radius: 4px;
   max-height: 350px;
   overflow: overlay;
   box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
