--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -3,7 +3,7 @@
         padding: 0;
 
         &.ant-tree-treenode-selected {
-            background-color: #e6f0f8;
+            background-color: #e6f0f800;
         }
     }
 
@@ -112,12 +112,12 @@
     text-overflow: ellipsis;
     display: block;
     white-space: nowrap;
-    padding: 2px;
+    padding: 0 0 0 5px;
     font-size: small;
 
     &:hover {
         background: rgba(247, 247, 247, 1);
-        padding: 2px;
+        // padding: 2px;
         border-radius: 3px;
     }
 }
@@ -137,7 +137,7 @@
 }
 
 .legend-list {
-    margin: 0 5px 0 0;
+    margin: 0 5px 0 5px;
 }
 
 .more,
