--- a/nextgisweb/webmap/nodepkg/layers-tree/TimeLine.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/TimeLine.less
@@ -1,11 +1,13 @@
-.timeline-block {
-  bottom: 100px;
+.timeline-content {
   width: 500px;
-  height: 150px;
   background: #fff;
-  border: 1px solid #106a90;
+  border: 1px solid rgb(16 106 144 / 50%);
   border-radius: 3px;
   position: fixed !important;
-  top: 41px !important;
-  right: 1px !important;
+  top: 42px;
+  right: 1px;
+
+  .range-picker {
+    padding: 2px;
+  }
 }
