test diagram generate uuid

--- a/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
@@ -8,6 +8,10 @@
         flex: auto;
         overflow-y: auto;
 
+        .request-block {
+            margin-bottom: 5px;
+        }
+
         .diagram-button {
             display: flex;
             justify-content: space-between;
