--- a/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
@@ -10,6 +10,28 @@
 
         .request-block {
             margin-bottom: 5px;
+            margin-top: 5px;
+            display: flex;
+            justify-content: space-between;
+
+            .float-input-label {
+                margin-top: -15px;
+                padding-left: 24px;
+                display: flex;
+                flex-direction: column;
+            }
+
+            .float-input-label .float {
+                top: 8px;
+                left: 5px;
+                background-color: white;
+                padding: 0 3px;
+                color: #808080;
+                font-size: 10px;
+                z-index: 10;
+                position: relative;
+                width: max-content;
+            }
         }
 
         .diagram-button {
