add layer on map using geojson for timeline

--- a/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
+++ b/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
@@ -80,6 +80,11 @@
                             title="{{gettext 'Identifiable'}}">
                         </div>
 
+                        <div data-dojo-attach-point="wdgtItemLayerTimeline"
+                            data-dojo-type="dijit/form/CheckBox"
+                            title="{{gettext 'Timeline'}}">
+                        </div>
+
                         <div data-dojo-attach-point="wLayerTransparency"
                             data-dojo-type="dijit/form/NumberTextBox"
                             data-dojo-props="constraints: {min: 0, max: 100}"
