add checkbox group layer timeline

--- a/nextgisweb/webmap/nodepkg/panel/timeline/TimeLinePanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/timeline/TimeLinePanel.less
@@ -1,5 +1,10 @@
-.ngw-webmap-search-panel {
+.ngw-webmap-timeline-panel {
   display: flex;
   flex-direction: column;
   height: 100%;
+
+  .ant-checkbox-group {
+    display: flex;
+    flex-direction: column;
+  }
 }
