test RangePicker from Timeline layerpanels

--- a/nextgisweb/webmap/nodepkg/layers-tree/TimeLine.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/TimeLine.less
@@ -1,13 +1,15 @@
-.timeline-content {
-  width: 500px;
-  background: #fff;
-  border: 1px solid rgb(16 106 144 / 50%);
-  border-radius: 3px;
-  position: fixed !important;
-  top: 42px;
-  right: 1px;
+.ant-picker-focused.ant-picker {
+  border-color: #02223c29;
+  box-shadow: 0 3px 7px #02223c29;
+  outline: 0;
+  background-color: white;
+  border-radius: 5px;
+}
 
-  .range-picker {
-    padding: 2px;
-  }
+.ant-dropdown {
+  border-color: #02223c29;
+  box-shadow: 0 3px 7px #02223c29;
+  outline: 0;
+  background-color: white;
+  border-radius: 5px;
 }
