test timeline extent layer and clear layer

--- a/nextgisweb/webmap/nodepkg/layers-tree/TimeLine.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/TimeLine.less
@@ -1,18 +1,31 @@
 .ant-picker-focused.ant-picker {
-  border-color: #02223c29;
-  box-shadow: 0 3px 7px #02223c29;
+  border-color: rgba(255, 255, 255, 0);
   outline: 0;
   background-color: white;
   border-radius: 5px;
+  
 }
 
 .ant-dropdown {
-  border-color: #02223c29;
-  box-shadow: 0 3px 7px #02223c29;
+  border-color: rgba(255, 255, 255, 0);
   outline: 0;
   background-color: white;
   border-radius: 5px;
+  border: 1px solid #d4d4d4;
+  box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
 }
 .ant-picker-time-panel {
   display:none !important;
+}
+
+.ant-picker {
+  border: 1px solid rgba(255, 255, 255, 0);
+}
+
+.ant-picker-range:hover {
+  border: 1px solid rgba(255, 255, 255, 0);
+}
+
+.ant-picker-focused.ant-picker:hover {
+  border: 1px solid rgba(255, 255, 255, 0);
 }
