--- a/nextgisweb/webmap/nodepkg/layers-tree/TimeLine.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/TimeLine.less
@@ -1,9 +1,14 @@
+.date-picker-panel {
+  display: flex;
+  align-items: center;
+}
+
 .ant-picker-focused.ant-picker {
   border-color: rgba(255, 255, 255, 0);
   outline: 0;
   background-color: white;
   border-radius: 5px;
-  
+
 }
 
 .ant-dropdown {
@@ -14,8 +19,9 @@
   border: 1px solid #d4d4d4;
   box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
 }
+
 .ant-picker-time-panel {
-  display:none !important;
+  display: none !important;
 }
 
 .ant-picker {
@@ -28,4 +34,22 @@
 
 .ant-picker-focused.ant-picker:hover {
   border: 1px solid rgba(255, 255, 255, 0);
+}
+
+.more {
+  font-size: 18px;
+  color: #106a90;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  justify-items: center;
+  justify-content: center;
+  align-items: center;
+  flex: 0 0 auto;
+}
+
+.ant-picker-focused {
+  border-color: #ffffff00;
+  box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+  outline: 0;
 }
