--- a/nextgisweb/webmap/nodepkg/layers-tree/TimeLine.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/TimeLine.less
@@ -36,11 +36,11 @@
   border: 1px solid rgba(255, 255, 255, 0);
 }
 
-.more {
+.button-style {
   font-size: 18px;
   color: #106a90;
-  width: 24px;
-  height: 24px;
+  width: 32px;
+  height: 32px;
   display: flex;
   justify-items: center;
   justify-content: center;
