--- a/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
@@ -8,9 +8,14 @@
         flex: auto;
         overflow-y: auto;
 
+        .request-block-list{
+            display: flex;
+            flex-direction: column;
+        }
+        
         .request-block {
-            margin-bottom: 5px;
-            margin-top: 5px;
+            margin-bottom: 10px;
+            margin-top: 10px;
             display: flex;
             justify-content: space-between;
 
