tests with styles and functional buttons

--- a/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/diagram/DiagramPanel.less
@@ -17,17 +17,17 @@
             margin-bottom: 10px;
             margin-top: 10px;
             display: flex;
+            align-items: center;
             justify-content: space-between;
 
             .float-input-label {
-                margin-top: -15px;
-                padding-left: 24px;
+                margin-top: -16px;
                 display: flex;
                 flex-direction: column;
             }
 
             .float-input-label .float {
-                top: 8px;
+                top: 6px;
                 left: 5px;
                 background-color: white;
                 padding: 0 3px;
@@ -37,13 +37,7 @@
                 position: relative;
                 width: max-content;
             }
-        }
 
-        .diagram-button {
-            display: flex;
-            justify-content: space-between;
-            padding: 0;
-            margin-bottom: 5px;
         }
 
         .diagram-button-old-new {
