git merge master, update code type script

--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -189,3 +189,13 @@
 .ant-tree .ant-tree-checkbox+span.ant-tree-node-selected {
     background-color: #ffffff00;
 }
+
+:where(.css-dev-only-do-not-override-1m5ewxh).ant-tree .ant-tree-switcher-leaf-line:before {
+    position: absolute;
+    top: -10px;
+    inset-inline-end: 12px;
+    bottom: -11px;
+    margin-inline-start: -1px;
+    border-inline-end: 1px solid #d9d9d9;
+    content: "";
+}
