test timeline component

--- a/nextgisweb/pyramid/nodepkg/link-resource/link-resource.less
+++ b/nextgisweb/pyramid/nodepkg/link-resource/link-resource.less
@@ -3,9 +3,6 @@
     padding: 0;
 
     svg.icon {
-        color: #87B4C7;
-    }
-    svg.icon:hover {
-        color: rgb(255, 255, 255);
+        color: #106a90;
     }
 }
