--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -190,7 +190,7 @@
     background-color: #ffffff00;
 }
 
-:where(.css-dev-only-do-not-override-1m5ewxh).ant-tree .ant-tree-switcher-leaf-line:before {
+.ant-tree .ant-tree-switcher-leaf-line:before {
     position: absolute;
     top: -10px;
     inset-inline-end: 12px;
