--- a/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
+++ b/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
@@ -80,9 +80,9 @@
                             title="{{gettext 'Identifiable'}}">
                         </div>
 
-                        <div data-dojo-attach-point="wdgtItemLayerTimeline"
+                        <div data-dojo-attach-point="wdgtItemLayerFilterByData"
                             data-dojo-type="dijit/form/CheckBox"
-                            title="{{gettext 'Timeline'}}">
+                            title="{{gettext 'FilterByData'}}">
                         </div>
 
                         <div data-dojo-attach-point="wLayerTransparency"
