--- a/nextgisweb/webmap/nodepkg/layers-tree/FilterByData.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/FilterByData.less
@@ -1,6 +1,7 @@
 .date-picker-panel {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .ant-picker-focused.ant-picker {
@@ -18,10 +19,6 @@
   border-radius: 5px;
   border: 1px solid #d4d4d4;
   box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
-}
-
-.ant-picker-time-panel {
-  display: none !important;
 }
 
 .ant-picker {
@@ -52,4 +49,9 @@
   border-color: #ffffff00;
   box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
   outline: 0;
+}
+
+.filter-by-data .ant-card-body {
+    padding: 6px;
+    color: var(--primary);
 }
