changing the background style for the scale when printing the map

--- a/nextgisweb/webmap/nodepkg/print-map/PrintMap.less
+++ b/nextgisweb/webmap/nodepkg/print-map/PrintMap.less
@@ -42,7 +42,7 @@
                 position: absolute;
                 bottom: 8px;
                 left: 8px;
-                background: white;
+                background: rgb(255 255 255 / 35%);
                 overflow: hidden;
                 color: black;
                 font-size: 14px;
