edit style layer tree

--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -199,3 +199,12 @@
     border-inline-end: 1px solid #d9d9d9;
     content: "";
 }
+
+.ant-tree-show-line .ant-tree-indent-unit:before {
+    position: absolute;
+    top: -10px;
+    inset-inline-end: 12px;
+    bottom: -10px;
+    border-inline-end: 1px solid #d9d9d9;
+    content: "";
+}
