--- a/nextgisweb/webmap/nodepkg/filter-by-field/FilterByField.less
+++ b/nextgisweb/webmap/nodepkg/filter-by-field/FilterByField.less
@@ -1,57 +1,44 @@
-.date-picker-panel {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .ant-picker-focused.ant-picker {
-    border-color: rgba(255, 255, 255, 0);
-    outline: 0;
-    background-color: white;
-    border-radius: 5px;
-  
-  }
-  
-  .ant-dropdown {
-    border-color: rgba(255, 255, 255, 0);
-    outline: 0;
-    background-color: white;
-    border-radius: 5px;
-    border: 1px solid #d4d4d4;
-    box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
-  }
-  
-  .ant-picker {
-    border: 1px solid rgba(255, 255, 255, 0);
-  }
-  
-  .ant-picker-range:hover {
-    border: 1px solid rgba(255, 255, 255, 0);
-  }
-  
-  .ant-picker-focused.ant-picker:hover {
-    border: 1px solid rgba(255, 255, 255, 0);
-  }
-  
-  .button-style {
-    font-size: 18px;
-    color: #106a90;
-    width: 32px;
-    height: 32px;
-    display: flex;
-    justify-items: center;
-    justify-content: center;
-    align-items: center;
-    flex: 0 0 auto;
-  }
-  
-  .ant-picker-focused {
-    border-color: #ffffff00;
-    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
-    outline: 0;
-  }
-  
-  .filter-by-data .ant-card-body {
-      padding: 6px;
-      color: var(--primary);
-  }
+.filter-by-field-menu {
+	background-color: #ffffff;
+	border-radius: 4px;
+	box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
+
+	.menu-filter {
+		padding: 4px;
+	}
+
+	.button-list {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
+	.button-all-obj {
+		margin: 0 0 0 4px;
+	}
+
+	.button-style {
+		width: 100%;
+		height: 32px;
+		display: flex;
+		justify-items: center;
+		align-items: center;
+		margin: 4px 0 0 0;
+	}
+
+	.layer-visible {
+		padding: 0px 0 0 15px;
+		width: 100%;
+	}
+
+	.layer-visible:hover {
+		background-color: rgba(0, 0, 0, 0.04);
+	}
+
+
+
+	.filter-by-data .ant-card-body {
+		padding: 6px;
+		color: var(--primary);
+	}
+}
