--- a/nextgisweb/webmap/nodepkg/filter-by-field/FilterByField.less
+++ b/nextgisweb/webmap/nodepkg/filter-by-field/FilterByField.less
@@ -5,6 +5,7 @@
 
 	.menu-filter {
 		padding: 4px;
+		max-width: 300px;
 	}
 
 	.button-list {
@@ -41,4 +42,41 @@
 		padding: 6px;
 		color: var(--primary);
 	}
+	.ant-card-bordered {
+		border: 0px solid #f0f0f0;
+	}
+
+}
+
+.ant-picker-dropdown .ant-picker-panel-container .ant-picker-panel-layout {
+	display: flex;
+	flex-wrap: nowrap;
+	align-items: stretch;
+	flex-direction: row-reverse;
+}
+
+.ant-picker-dropdown .ant-picker-panel-container .ant-picker-presets {
+	display: flex;
+	flex-direction: column;
+	min-width: 120px;
+	max-width: fit-content;
+}
+
+.button-style {
+	width: 100%;
+	height: 32px;
+	display: flex;
+	justify-items: center;
+	align-items: center;
+	margin: 4px 0 0 0;
+}
+
+.ant-picker-range {
+	display: flex;
+}
+
+.ant-picker-dropdown .ant-picker-footer-extra {
+	padding: 0 12px;
+	line-height: 38px;
+	text-align: end;
 }
