--- a/nextgisweb/webmap/nodepkg/filter-by-field/FilterByField.less
+++ b/nextgisweb/webmap/nodepkg/filter-by-field/FilterByField.less
@@ -5,17 +5,50 @@
 
 	.menu-filter {
 		padding: 4px;
-		max-width: 300px;
-	}
 
-	.button-list {
-		display: flex;
-		flex-direction: column;
-		align-items: flex-start;
-	}
+		.range-picker-input {
+			display: flex;
+			justify-content: space-between;
 
-	.button-all-obj {
-		margin: 0 0 0 4px;
+			.ant-btn.ant-btn-icon-only {
+				width: 32px;
+				padding-inline-start: 0;
+				padding-inline-end: 0;
+				margin-inline-start: 4px;
+			}
+		}
+
+		.info-list {
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+
+			.info-date {
+				display: flex;
+				justify-content: space-between;
+				width: 100%;
+			}
+
+			.selected-date {
+				font-weight: 600;
+				padding: 0 0 0 5px;
+			}
+		}
+
+		.ant-picker-range {
+			position: relative;
+			display: flex;
+		}
+
+		.ant-card-body {
+			padding: 4px;
+		}
+
+		.ant-card-bordered {
+			border: 0px solid #f0f0f096;
+			width: 100%;
+			margin-top: 5px;
+		}
 	}
 
 	.button-style {
@@ -36,47 +69,4 @@
 		background-color: rgba(0, 0, 0, 0.04);
 	}
 
-
-
-	.filter-by-data .ant-card-body {
-		padding: 6px;
-		color: var(--primary);
-	}
-	.ant-card-bordered {
-		border: 0px solid #f0f0f0;
-	}
-
-}
-
-.ant-picker-dropdown .ant-picker-panel-container .ant-picker-panel-layout {
-	display: flex;
-	flex-wrap: nowrap;
-	align-items: stretch;
-	flex-direction: row-reverse;
-}
-
-.ant-picker-dropdown .ant-picker-panel-container .ant-picker-presets {
-	display: flex;
-	flex-direction: column;
-	min-width: 120px;
-	max-width: fit-content;
-}
-
-.button-style {
-	width: 100%;
-	height: 32px;
-	display: flex;
-	justify-items: center;
-	align-items: center;
-	margin: 4px 0 0 0;
-}
-
-.ant-picker-range {
-	display: flex;
-}
-
-.ant-picker-dropdown .ant-picker-footer-extra {
-	padding: 0 12px;
-	line-height: 38px;
-	text-align: end;
 }
