Added a button to call the filter panel by date in the field name

--- a/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureTable.less
+++ b/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureTable.less
@@ -30,6 +30,10 @@
                     background-color: var(--color-secondary);
                 }
 
+                .button-column {
+                    display: flex;
+                }
+
                 .label {
                     flex-grow: 1;
                     min-width: 0;
@@ -44,7 +48,7 @@
                     span.asc,
                     span.desc {
                         svg.icon {
-                            margin: 0 -2px;
+                            margin: 0 2px;
                         }
                     }
 
