Setting the button style for calling the filter panel by date in the field name

--- a/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureTable.less
+++ b/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureTable.less
@@ -32,6 +32,20 @@
 
                 .button-column {
                     display: flex;
+                    align-items: center;
+                    
+                    button {
+                        font-size: 14px;
+                        height: 24px;
+                        padding: 0px 0px;
+                        border-radius: 4px;
+                    font-weight: var(--font-weight-strong);
+
+                    }
+
+                    button:hover {
+                        background-color: var(--color-secondary);
+                    }
                 }
 
                 .label {
