--- a/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureTable.less
+++ b/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureTable.less
@@ -39,12 +39,11 @@
                         height: 24px;
                         padding: 0px 0px;
                         border-radius: 4px;
-                    font-weight: var(--font-weight-strong);
-
+                        font-weight: var(--font-weight-strong);
                     }
 
                     button:hover {
-                        background-color: var(--color-secondary);
+                        background-color: var(--on-primary-text);
                     }
                 }
 
