Improved filtering of fields with DATE and DATETIME formats. Added filtering options to the API when exporting to a file

--- a/nextgisweb/webmap/nodepkg/filter-by-data/FilterByData.less
+++ b/nextgisweb/webmap/nodepkg/filter-by-data/FilterByData.less
@@ -18,55 +18,13 @@
 			}
 		}
 
-		.info-list {
-			display: flex;
-			flex-direction: column;
-			align-items: flex-start;
-
-			.info-date {
-				display: flex;
-				justify-content: space-between;
-				width: 100%;
-			}
-
-			.selected-date {
-				font-weight: 600;
-				padding: 0 0 0 5px;
-			}
-		}
-
 		.ant-picker-range {
 			position: relative;
 			display: flex;
 		}
-
-		.ant-card-body {
-			padding: 4px;
-		}
-
-		.ant-card-bordered {
-			border: 0px solid #f0f0f096;
-			width: 100%;
-			margin-top: 5px;
-		}
 	}
+}
 
-	.button-style {
-		width: 100%;
-		height: 32px;
-		display: flex;
-		justify-items: center;
-		align-items: center;
-		margin: 4px 0 0 0;
-	}
-
-	.layer-visible {
-		padding: 0px 0 0 15px;
-		width: 100%;
-	}
-
-	.layer-visible:hover {
-		background-color: rgba(0, 0, 0, 0.04);
-	}
-
+.ant-tooltip {
+    pointer-events: none;
 }
