test filter add tree fields

--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -1,20 +1,16 @@
-.content-filters {
-    display: flex;
-    flex-direction: column;
+.filter-layer-modal {
 
-    label-item{
-        span {
-            border: 0.1em solid #8eb9fb;
-            margin-top: -0.1em;
-            margin-left: -0.1em;
-            box-shadow: 0 0 0.2em #3b88fd;
-        }
-
+    .ant-modal-content {
+        padding: 5px;
     }
 
-    .content-item {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
+    .ant-tree .ant-tree-switcher {
+        width: 0px;
+    }
+
+    .ant-modal-close {
+        position: absolute;
+        top: 5px;
+        inset-inline-end: 5px;
     }
 }
