test form list and form item

--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -1,16 +1,5 @@
-.filter-layer-modal {
+.content-filters {
+    display: flex;
 
-    .ant-modal-content {
-        padding: 5px;
-    }
-
-    .ant-tree .ant-tree-switcher {
-        width: 0px;
-    }
-
-    .ant-modal-close {
-        position: absolute;
-        top: 5px;
-        inset-inline-end: 5px;
-    }
+    flex-direction: column;
 }
