panel custom layers, added a tab for creating and editing a new layer

--- a/nextgisweb/webmap/nodepkg/panel/custom-layer/CustomLayer.less
+++ b/nextgisweb/webmap/nodepkg/panel/custom-layer/CustomLayer.less
@@ -1,4 +1,8 @@
-.ngw-webmap-upload-layer-panel {
+.ngw-webmap-custom-layer-panel {
+    .ant-collapse-content-box {
+        padding: 0;
+    }
+
     .ant-upload.ant-upload-drag {
         min-height: 40px;
         display: flex;
@@ -61,7 +65,7 @@
                 text-overflow: ellipsis;
                 cursor: pointer;
 
-                .title{
+                .title {
                     margin: 0 0 0 10px;
                 }
 
