--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -56,6 +56,9 @@
 
                 .legend-title {
                     display: flex;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
                 }
             }
 
